--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,26 @@
 
-body{
-  background-color: rgb(224 224 235);
+
+/* Tema claro */
+ .theme-light {
+  background-color: rgb(224 224 235); /* fondo del body */
+  color: #222222; /* color del texto */
+  height: 100vh;
+}
+
+/* Tema oscuro */
+.theme-dark {
+  background-color: #474258; /* fondo oscuro */
+  color: #f5f5f5; /* texto claro */
+  height: 100vh;
+}
+
+/* Las cards se pintan según el tema */
+.theme-light .card {
+  background-color: #f8f9fa; /* gris claro */
+  color: #222;
+}
+
+.theme-dark .card {
+  background-color: #c9d1e9; /* gris oscuro */
+  color: #f5f5f5;
 }
